--- a/templates/monty.tt
+++ b/templates/monty.tt
@@ -1,4 +1,4 @@
-<div class="trophy monty">
+<div class="trophy [% trophy_class %] monty">
 <h3 class="trophy_name">[% trophy_name %]</h3>
 [% IF trophy_desc -%]
 	<p class="trophy_desc">[% trophy_desc %]</p>
