post november 2009 commit

--- a/templates/wrapper.tt
+++ b/templates/wrapper.tt
@@ -45,17 +45,21 @@ go kill things
 </div><!-- id="footer" -->
 
 </div> <!-- id="wrap" -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+
+<script type="text/javascript>
+// google analytics
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', 'UA-11553617-1']);
+_gaq.push(['trackPageView']);
+(function () {
+var ga = document.createElement('script');
+ga.src = ('https:'==document.location.protocol ? 'https://ssl' : 'http://www')
+	+ '.google-analytics.com/ga.js';
+ga.setAttribute('async', 'true');
+document.documentElement.firstChild.appendChild(ga);
+})();
 </script>
-<script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-11553617-1");
-pageTracker._setDomainName("none");
-pageTracker._setAllowLinker(true);
-pageTracker._trackPageview();
-} catch(err) {}</script>
+
 </body>
 </html>
 [% END # IF no_wrap %]
