--- a/templates/wrapper.tt
+++ b/templates/wrapper.tt
@@ -46,18 +46,13 @@ go kill things
 
 </div> <!-- id="wrap" -->
 
-<script type="text/javascript>
-// google analytics
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-11553617-1']);
-_gaq.push(['trackPageView']);
-(function () {
-var ga = document.createElement('script');
-ga.src = ('https:'==document.location.protocol ? 'https://ssl' : 'http://www')
-	+ '.google-analytics.com/ga.js';
-ga.setAttribute('async', 'true');
-document.documentElement.firstChild.appendChild(ga);
-})();
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-11553617-1");
+pageTracker._trackPageview();
 </script>
 
 </body>
