--- a/templates/wrapper.tt
+++ b/templates/wrapper.tt
@@ -5,11 +5,13 @@
 <html>
 <head>
 	<title>
-		[% page_title || 'Clan EIT Elite Scoreboard 2011'  %]
+		[% page_title || 'Clan EIT Elite Scoreboard'  %]
 		[% page_subtitle ? ' | ' _ page_subtitle : '' %]
 	</title>
 	<link rel="stylesheet" type="text/css" href="/style/style.css" />
-	<script type="text/javascript" src="/js/prototype.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/js/highcharts.js"></script>
+  <script type="text/javascript" src="/js/highcharts-gray.js"></script>
 	<script type="text/javascript" src="/js/eit.js"></script>
 <body>
 <div id="wrap">
@@ -19,7 +21,8 @@
 <a href="/2008/">2008</a> | 
 <a href="/2009/">2009</a> | 
 <a href="/2010/">2010</a> | 
-<b>2011</b>
+<a href="/2011/">2011</a> | 
+<a href="/">2012</a>
 </div>
 <div class="search top_search">
 <form action="/search" method="get">
@@ -28,7 +31,7 @@
 </form>
 </div>
 
-<h1 class="headline"><a href="/">Clan EIT Elite Scoreboard 2011</a></h1>
+<h1 class="headline"><a href="/">Clan EIT Elite Scoreboard</a></h1>
 [% IF updated_on %]
 <h3 class="headline updated_on">Updated: [% updated_on %]</h3>
 [% END %]
@@ -45,7 +48,7 @@
 </div><!-- id="content" -->
 
 <div id="footer">
-copyright 1979-2011 eit_krog.  
+copyright 1979-2012 eit_krog.  
 this data updates every ten minutes.  
 go kill things
 </div><!-- id="footer" -->
