--- a/root/static/style/style.css
+++ b/root/static/style/style.css
@@ -103,7 +103,9 @@ table.trophy {
 	height: 40px;
 	display: block;
 }
-
+.trophy td {
+  overflow-x: hidden;
+}
 .trophy thead {
 	display: none;
 }
@@ -115,6 +117,7 @@ table.trophy {
 .trophy td.value {
 	text-align: right;
 	width: 50px;
+  overflow-x: hidden;
 }
 
 .even {
